@@ -46,21 +46,11 @@ public class PrecompactedRow extends AbstractCompactedRow
     private static Logger logger = LoggerFactory.getLogger(PrecompactedRow.class);
 
     private final ColumnFamily compactedCf;
-    private final int gcBefore;
-
-    // For testing purposes
-    public PrecompactedRow(DecoratedKey<?> key, ColumnFamily compacted)
-    {
-        super(key);
-        this.compactedCf = compacted;
-        this.gcBefore = Integer.MAX_VALUE;
-    }
 
     /** it is caller's responsibility to call removeDeleted + removeOldShards from the cf before calling this constructor */
-    public PrecompactedRow(DecoratedKey<?> key, CompactionController controller, ColumnFamily cf)
+    public PrecompactedRow(DecoratedKey<?> key, ColumnFamily cf)
     {
         super(key);
-        this.gcBefore = controller.gcBefore;
         compactedCf = cf;
     }
 
@@ -100,7 +90,6 @@ public class PrecompactedRow extends AbstractCompactedRow
     public PrecompactedRow(CompactionController controller, List<SSTableIdentityIterator> rows)
     {
         this(rows.get(0).getKey(),
-             controller,
              removeDeletedAndOldShards(rows.get(0).getKey(), controller, merge(rows)));
     }
 
@@ -165,7 +154,7 @@ public class PrecompactedRow extends AbstractCompactedRow
 
     public boolean isEmpty()
     {
-        return compactedCf == null || ColumnFamilyStore.removeDeletedCF(compactedCf, gcBefore) == null;
+        return compactedCf == null;
     }
 
     public int columnCount()
